syntax = "proto3";

package configure;
option go_package = "./v1;v1";
import "validate/validate.proto";

// 查询指定模板
message GetConfigureRequest{
  int64 server_id = 1[(validate.rules).int64 = {gt: 0}];
  int64 environment_id = 2[(validate.rules).int64 = {gt: 0}];
}

message GetConfigureReply{
  int64 id = 1;
  int64 server_id = 2;
  int64 environment_id = 3;
  string content = 4;
  string description = 5;
  string version = 6;
  string format = 7;
  string operator = 8;
  int64 operator_id = 9;
  int64 created_at = 10;
}

// 新增模板
message UpdateConfigureRequest {
  int64 server_id = 1[(validate.rules).int64 = {gt: 0}];
  int64 environment_id = 2[(validate.rules).int64 = {gt: 0}];
  string description = 3[(validate.rules).string = {min_len: 3, max_len: 64}];
}

// 监听获取配置
message WatchConfigureRequest {
  string server = 1[(validate.rules).string = {min_len: 1}];
  string token = 2[(validate.rules).string = {min_len: 1}];
}

message WatchConfigureReply {
  string content = 1;
  string format = 2;
}
